--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -31,15 +31,18 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update && sudo apt install -yq python3-pip
-          sudo apt install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl git
+          sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl git
 
           curl https://pyenv.run | bash
-          echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc
+          export PATH="~/.pyenv/bin:$PATH" >> ~/.bashrc
+          eval "$(pyenv init -)" >> ~/.bashrc
+          eval "$(pyenv virtualenv-init -)" >> ~/.bashrc
+
           source ~/.bashrc
 
           pyenv install 3.5.3
           pyenv global 3.5.3
-          pyenv virtualenv 3.5.3 venv
+          pyenv virtualenv 3.5.3 env
           pip --version
           pip3 -V
           python --version
