--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -34,11 +34,9 @@ jobs:
           sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python-openssl git
 
           curl https://pyenv.run | bash
-          export PATH="~/.pyenv/bin:$PATH" >> ~/.bashrc
-          eval "$(pyenv init -)" >> ~/.bashrc
-          eval "$(pyenv virtualenv-init -)" >> ~/.bashrc
-
-          source ~/.bashrc
+          export PATH="~/.pyenv/bin:$PATH"
+          eval "$(pyenv init --path)"
+          eval "$(pyenv virtualenv-init -)"
 
           pyenv install 3.5.3
           pyenv global 3.5.3
